--- a/index.html
+++ b/index.html
@@ -21,17 +21,28 @@
                 <h1 class="header_primary">
                     <span class="header_primary_main">Hellraising in the Modern Era</span>
                     <span class="header_primary_sub">Usher in a New Age of Fire</span>
-
-                    <a href="#" class="btn btn_white">Join Us</a>
                 </h1>
+
+                <a href="#" class="btn btn_white">Join Us</a>
             </div>
         </header>
 
-        <!-- <main>
-            <section class="section_intro">
+        <main>
+            <section class="section_info">
+                <div class="infoText_box">
+                    <h4 class="header_secondary">
+                        Open your mind
+                    </h4>
+                    <p class="infoText_text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Fusce tempus mollis ligula sit amet vehicula. Quisque ut 
+                        neque ac erat placerat molestie.
+                    </p>
 
+                    <a href="#" class="btn btn_secondary">Learn more &#8594;</a>
+                </div>
             </section>
-        </main> -->
+        </main>
 
     </body>
 </html>
