added styles to section_info content
except the image though. added the _images file in composition at the end

--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
                     <h4 class="header_secondary">
                         Open your mind
                     </h4>
-                    <p class="infoText_text">
+                    <p class="paragraph">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                         Fusce tempus mollis ligula sit amet vehicula. Quisque ut 
                         neque ac erat placerat molestie.
                     </p>
+
+                    <img src="/imgs/tpose.jpg" alt="man t-posing">
 
                     <a href="#" class="btn btn_secondary">Learn more &#8594;</a>
                 </div>
