added a border to section_info image
title

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                         neque ac erat placerat molestie.
                     </p>
 
-                    <img src="/imgs/tpose.jpg" alt="man t-posing">
-
                     <a href="#" class="btn btn_secondary">Learn more &#8594;</a>
+
+                    <img class="infoImage" src="/imgs/tpose.jpg" alt="man t-posing">
                 </div>
             </section>
         </main>
