more fucking around. added _home.scss file

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
             <section class="section_info">
                 <div class="infoAll_box">
                     <div class="infoText_box">
-                        <h4 class="header_secondary u_mb_sm">
+                        <h4 class="header_secondary">
                             Open your mind
                         </h4>
-                        <p class="paragraph u_mb_sm">
+                        <p class="paragraph">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                             Fusce tempus mollis ligula sit amet vehicula. Quisque ut 
                             neque ac erat placerat molestie.
                         </p>
 
-                        <a href="#" class="btn btn_secondary u_mb_sm">Learn more &#8594;</a>
+                        <a href="#" class="btn btn_secondary">Learn more &#8594;</a>
                     </div>
 
                     <div class="infoImage_box">
