added section_benefits content
title

--- a/index.html
+++ b/index.html
@@ -53,7 +53,46 @@
                     </div>
                    
                 </div>
-                
+            </section>
+
+            <section class="section_benefits">
+
+                <div class="cards_col_1">
+                    <img src="./imgs/firealarm.svg" alt="">
+                    <h3 class="header_teritary">
+                        Submit
+                    </h3>
+                    <p class="benefits_paragraph paragaph">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Fusce tempus mollis ligula sit amet vehicula. Quisque ut 
+                        neque ac erat placerat molestie.
+                    </p>
+                </div>
+
+                <div class="cards_col_2">
+                    <img src="./imgs/match.svg" alt="">
+                    <h3 class="header_teritary">
+                        Be Enlightened
+                    </h3>
+                    <p class="benefits_paragraph paragaph">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Fusce tempus mollis ligula sit amet vehicula. Quisque ut 
+                        neque ac erat placerat molestie.
+                    </p>
+                </div>
+
+                <div class="cards_col_2">
+                    <img src="./imgs/chalice.svg" alt="">
+                    <h3 class="header_teritary">
+                        Ascend
+                    </h3>
+                    <p class="benefits_paragraph paragaph">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Fusce tempus mollis ligula sit amet vehicula. Quisque ut 
+                        neque ac erat placerat molestie.
+                    </p>
+                </div>
+
             </section>
         </main>
 
