Squashed commit of the following:
commit 128fdf3becf7cbf7cde5e5ba9dbfce1ae4515718
Author: KosmicArts <54221340+KosmicArts@users.noreply.github.com>
Date:   Mon Jul 19 18:21:18 2021 -0500

    added section_benefits content

    title

commit e7f912322b598265a64a4b6d3e5b8bb0ec9d4da1
Author: KosmicArts <54221340+KosmicArts@users.noreply.github.com>
Date:   Mon Jul 19 17:50:08 2021 -0500

    fixed secondary btn and added secondary header divider

    title

commit 1d9994dd86a8bffca7fe9ceb8d6e58e0ed539255
Author: KosmicArts <54221340+KosmicArts@users.noreply.github.com>
Date:   Tue Jul 13 20:17:17 2021 -0500

    added wrappers and grid in intro

    also begin changing the secondary button design

commit 95b8d482feeabf36f7abe52459d9317ab524a730
Author: KosmicArts <54221340+KosmicArts@users.noreply.github.com>
Date:   Tue Jul 13 18:53:58 2021 -0500

    cleaning html, remove flex.scss

    title

commit d9d6dbc4d5913f0f9c40f7c477bc6f8c6f0655e6
Author: KosmicArts <54221340+KosmicArts@users.noreply.github.com>
Date:   Sat Jul 10 19:58:21 2021 -0500

    more fucking around. added _home.scss file

commit 40699891c3ae802aadd87035e4f854082c73ea22
Author: KosmicArts <54221340+KosmicArts@users.noreply.github.com>
Date:   Sat Jul 10 14:18:01 2021 -0500

    fuckin around with divs and added _utilities file

    title

commit 404397d2cc0b4c2fb9f288cf9be62a270c8dfdaa
Author: KosmicArts <54221340+KosmicArts@users.noreply.github.com>
Date:   Sat Jul 10 06:05:25 2021 -0500

    updated README.md

    title

commit 74a5a68792e8053050a93d032f624ad8404a4df6
Author: KosmicArts <54221340+KosmicArts@users.noreply.github.com>
Date:   Sat Jul 10 06:03:49 2021 -0500

    added a border to section_info image

    title

commit 64f2932d65e9450eb5d3bbb150494e80c11c8ae0
Author: KosmicArts <54221340+KosmicArts@users.noreply.github.com>
Date:   Wed Jul 7 02:42:48 2021 -0500

    added styles to section_info content

    except the image though. added the _images file in composition at the end

co

--- a/index.html
+++ b/index.html
@@ -21,17 +21,80 @@
                 <h1 class="header_primary">
                     <span class="header_primary_main">Hellraising in the Modern Era</span>
                     <span class="header_primary_sub">Usher in a New Age of Fire</span>
-
-                    <a href="#" class="btn btn_white">Join Us</a>
                 </h1>
+
+                <a href="#" class="btn btn_white">Join Us</a>
             </div>
         </header>
 
-        <!-- <main>
+        <main>
             <section class="section_intro">
+                <div class="intro_col_1">
+
+                    <div class="introText_wrapper">
+                        <h4 class="intro_header header_secondary">
+                        Open your mind
+                        </h4>
+                        <p class="intro_paragraph paragraph">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Fusce tempus mollis ligula sit amet vehicula. Quisque ut 
+                            neque ac erat placerat molestie.
+                        </p>
+
+                        <a href="#" class="btn btn_secondary">Learn more</a>
+                    </div>
+
+                </div>
+                
+                <div class="intro_col_2">
+
+                    <div class="introImage_wrapper">
+                        <img class="introImage" src="/imgs/tpose.jpg" alt="man t-posing"> 
+                    </div>
+                   
+                </div>
+            </section>
+
+            <section class="section_benefits">
+
+                <div class="cards_col_1">
+                    <img src="./imgs/firealarm.svg" alt="">
+                    <h3 class="header_teritary">
+                        Submit
+                    </h3>
+                    <p class="benefits_paragraph paragaph">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Fusce tempus mollis ligula sit amet vehicula. Quisque ut 
+                        neque ac erat placerat molestie.
+                    </p>
+                </div>
+
+                <div class="cards_col_2">
+                    <img src="./imgs/match.svg" alt="">
+                    <h3 class="header_teritary">
+                        Be Enlightened
+                    </h3>
+                    <p class="benefits_paragraph paragaph">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Fusce tempus mollis ligula sit amet vehicula. Quisque ut 
+                        neque ac erat placerat molestie.
+                    </p>
+                </div>
+
+                <div class="cards_col_2">
+                    <img src="./imgs/chalice.svg" alt="">
+                    <h3 class="header_teritary">
+                        Ascend
+                    </h3>
+                    <p class="benefits_paragraph paragaph">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Fusce tempus mollis ligula sit amet vehicula. Quisque ut 
+                        neque ac erat placerat molestie.
+                    </p>
+                </div>
 
             </section>
-        </main> -->
+        </main>
 
     </body>
 </html>
