changed a bunch of class names and created benefits-box.scss
title

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             <section class="section_intro">
                 <div class="intro_col_1">
 
-                    <div class="introText_wrapper">
-                        <h4 class="intro_header header_secondary">
+                    <div class="intro-box">
+                        <h4 class="intro-box_header header_secondary">
                         Open your mind
                         </h4>
-                        <p class="intro_paragraph paragraph">
+                        <p class="intro-box_paragraph paragraph">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                             Fusce tempus mollis ligula sit amet vehicula. Quisque ut 
                             neque ac erat placerat molestie.
@@ -48,8 +48,8 @@
                 
                 <div class="intro_col_2">
 
-                    <div class="introImage_wrapper">
-                        <img class="introImage" src="/imgs/tpose.jpg" alt="man t-posing"> 
+                    <div class="introImage-box">
+                        <img class="introImage-box_image" src="/imgs/tpose.jpg" alt="man t-posing"> 
                     </div>
                    
                 </div>
@@ -57,40 +57,46 @@
 
             <section class="section_benefits">
 
-                <div class="cards_col_1">
-                    <img src="./imgs/firealarm.svg" alt="">
-                    <h3 class="header_teritary">
-                        Submit
-                    </h3>
-                    <p class="benefits_paragraph paragaph">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                        Fusce tempus mollis ligula sit amet vehicula. Quisque ut 
-                        neque ac erat placerat molestie.
-                    </p>
+                <div class="benefits_col_1">
+                    <div class="benefit-box">
+                        <img src="./imgs/firealarm.svg" alt="">
+                        <h3 class="header_teritary">
+                            Submit
+                        </h3>
+                        <p class="benefits-box_paragraph paragaph">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Fusce tempus mollis ligula sit amet vehicula. Quisque ut 
+                            neque ac erat placerat molestie.
+                        </p>
+                    </div>
                 </div>
 
-                <div class="cards_col_2">
-                    <img src="./imgs/match.svg" alt="">
-                    <h3 class="header_teritary">
-                        Be Enlightened
-                    </h3>
-                    <p class="benefits_paragraph paragaph">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                        Fusce tempus mollis ligula sit amet vehicula. Quisque ut 
-                        neque ac erat placerat molestie.
-                    </p>
+                <div class="benefits_col_2">
+                    <div class="benefit-box">
+                        <img src="./imgs/match.svg" alt="">
+                        <h3 class="header_teritary">
+                            Be Enlightened
+                        </h3>
+                        <p class="benefits-box_paragraph paragaph">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Fusce tempus mollis ligula sit amet vehicula. Quisque ut 
+                            neque ac erat placerat molestie.
+                        </p>
+                    </div>
                 </div>
 
-                <div class="cards_col_2">
-                    <img src="./imgs/chalice.svg" alt="">
-                    <h3 class="header_teritary">
-                        Ascend
-                    </h3>
-                    <p class="benefits_paragraph paragaph">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                        Fusce tempus mollis ligula sit amet vehicula. Quisque ut 
-                        neque ac erat placerat molestie.
-                    </p>
+                <div class="benefits_col_2">
+                    <div class="benefit-box">
+                        <img src="./imgs/chalice.svg" alt="">
+                        <h3 class="header_teritary">
+                            Ascend
+                        </h3>
+                        <p class="benefits-box_paragraph paragaph">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Fusce tempus mollis ligula sit amet vehicula. Quisque ut 
+                            neque ac erat placerat molestie.
+                        </p>
+                    </div>
                 </div>
 
             </section>
