--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="intro_col_2">
 
                     <div class="introImage-box">
-                        <img class="introImage-box_image" src="/imgs/tpose.jpg" alt="man t-posing"> 
+                        <img class="introImage-box_img" src="/imgs/tpose.jpg" alt="man t-posing"> 
                     </div>
                    
                 </div>
@@ -59,11 +59,11 @@
 
                 <div class="benefits_col_1">
                     <div class="benefit-box">
-                        <img src="./imgs/firealarm.svg" alt="">
+                        <img class="benefit-box_img" src="./imgs/firealarm.svg" alt="">
                         <h3 class="header_teritary">
                             Submit
                         </h3>
-                        <p class="benefits-box_paragraph paragaph">
+                        <p class="benefit-box_paragraph paragaph">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                             Fusce tempus mollis ligula sit amet vehicula. Quisque ut 
                             neque ac erat placerat molestie.
@@ -73,11 +73,11 @@
 
                 <div class="benefits_col_2">
                     <div class="benefit-box">
-                        <img src="./imgs/match.svg" alt="">
+                        <img class="benefit-box_img" src="./imgs/match.svg" alt="">
                         <h3 class="header_teritary">
                             Be Enlightened
                         </h3>
-                        <p class="benefits-box_paragraph paragaph">
+                        <p class="benefit-box_paragraph paragaph">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                             Fusce tempus mollis ligula sit amet vehicula. Quisque ut 
                             neque ac erat placerat molestie.
@@ -87,11 +87,11 @@
 
                 <div class="benefits_col_2">
                     <div class="benefit-box">
-                        <img src="./imgs/chalice.svg" alt="">
+                        <img class="benefit-box_img" src="./imgs/chalice.svg" alt="">
                         <h3 class="header_teritary">
                             Ascend
                         </h3>
-                        <p class="benefits-box_paragraph paragaph">
+                        <p class="benefit-box_paragraph paragaph">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                             Fusce tempus mollis ligula sit amet vehicula. Quisque ut 
                             neque ac erat placerat molestie.
